objects/ASI_LUX_Campaign_Contribution__c.object
<CustomObject>
    <description>ASI HK CRM Object to store value of campaign contribution amount</description>
    <fields>
        <fullName>ASI_LUX_Account__c</fullName>
        <label>Account</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>contains</operation>
                <value>Lux</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>contains</operation>
                <value>BRD</value>
            </filterItems>
            <infoMessage>Please select a Luxury Account</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaign Contributions</relationshipLabel>
        <relationshipName>Campaign_Contributions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_LUX_Contribution_Amount__c</fullName>
        <label>Contribution Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_LUX_Luxury_Campaign_Lookup__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup field for a Luxury Campaign</description>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaign Contributions</relationshipLabel>
        <relationshipName>Campaign_Contributions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Campaign Contribution</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CPC-{000000}</displayFormat>
        <label>Campaign Contribution ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Contributions</pluralLabel>
    <recordTypes>
        <fullName>ASI_BRD_Generic_Campaign_Contribution</fullName>
        <active>true</active>
        <label>Campaign Contribution (Brand)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_LUX_Campaign_Contribution_Regional</fullName>
        <active>true</active>
        <label>Campaign Contribution (Regional)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_LUX_HK_Campaign_Contribution</fullName>
        <active>true</active>
        <label>Campaign Contribution (HK)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_LUX_JP_Campaign_Contribution</fullName>
        <active>true</active>
        <label>Campaign Contribution (JP)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_LUX_MY_Campaign_Contribution</fullName>
        <active>true</active>
        <label>Campaign Contribution (MY)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_LUX_SG_Campaign_Contribution</fullName>
        <active>true</active>
        <label>Campaign Contribution (SG)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_LUX_TW_Campaign_Contribution</fullName>
        <active>true</active>
        <label>Campaign Contribution (TW)</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>